| Bug #25933 | NdbOperation::subValue Uint64 not implemented | ||
|---|---|---|---|
| Submitted: | 29 Jan 2007 22:58 | Modified: | 23 Mar 2007 11:33 |
| Reporter: | Monty Taylor | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: NDBAPI | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Linux (linux) |
| Assigned to: | Hartmut Holzgraefe | Target Version: | |
[29 Jan 2007 22:58]
Monty Taylor
[15 Mar 2007 11:26]
Hartmut Holzgraefe
verified, there are 6 different prototypes for subValue() in the header files but only 4 symbols in the library. For incValue() i see 6 protos and 6 library symbols as expected
[15 Mar 2007 12:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/22003 ChangeSet@1.2488, 2007-03-15 13:35:49+01:00, hartmut@mysql.com +1 -0 added missing prototype implementations (bug #25933)
