added missing prototype implementations (bug #25933)